--- a/LEDCube/Testing/project_1/project_1.runs/impl_1/usage_statistics_webtalk.html
+++ b/LEDCube/Testing/project_1/project_1.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 13 15:57:50 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon May 13 16:46:09 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>86248e97067b441c95542bf1eac7865d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>10</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>13</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a592ec0c0e5d590d8472f8acd5eb9cfb</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,12 +34,12 @@
 <TR ALIGN='LEFT'>   <TD>abstractcombinedpanel_remove_selected_elements=2</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>basedialog_cancel=10</TD>
-   <TD>basedialog_close=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=122</TD>
+   <TD>basedialog_close=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=143</TD>
    <TD>basedialog_yes=1</TD>
    <TD>boardchooser_board_table=1</TD>
    <TD>closeplanner_yes=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=12</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
    <TD>constraintschooserpanel_copy_constraints_files_into_project=1</TD>
    <TD>constraintschooserpanel_create_file=2</TD>
@@ -47,96 +47,99 @@
    <TD>createconstraintsfilepanel_file_name=2</TD>
    <TD>createsrcfiledialog_file_name=1</TD>
    <TD>filesetpanel_file_set_panel_tree=43</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=46</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=55</TD>
    <TD>hcodeeditor_close=1</TD>
    <TD>hcodeeditor_search_text_combo_box=1</TD>
    <TD>hpopuptitle_close=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>incrementalrunpanel_turn_incremental_implementation_on=1</TD>
-   <TD>instancemenu_floorplanning=1</TD>
-   <TD>languagetemplatesdialog_templates_tree=121</TD>
-   <TD>mainmenumgr_checkpoint=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_constraints=2</TD>
+   <TD>instancemenu_floorplanning=2</TD>
+   <TD>languagetemplatesdialog_templates_tree=135</TD>
+   <TD>mainmenumgr_checkpoint=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_constraints=4</TD>
    <TD>mainmenumgr_edit=14</TD>
-   <TD>mainmenumgr_export=2</TD>
-   <TD>mainmenumgr_file=26</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_floorplanning=1</TD>
+   <TD>mainmenumgr_export=4</TD>
+   <TD>mainmenumgr_file=28</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_floorplanning=3</TD>
    <TD>mainmenumgr_flow=10</TD>
-   <TD>mainmenumgr_io_planning=1</TD>
-   <TD>mainmenumgr_ip=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=12</TD>
-   <TD>mainmenumgr_reports=2</TD>
+   <TD>mainmenumgr_import=2</TD>
+   <TD>mainmenumgr_io_planning=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=4</TD>
+   <TD>mainmenumgr_project=14</TD>
+   <TD>mainmenumgr_reports=4</TD>
    <TD>mainmenumgr_settings=1</TD>
-   <TD>mainmenumgr_text_editor=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_timing=1</TD>
-   <TD>mainmenumgr_tools=16</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_text_editor=3</TD>
+   <TD>mainmenumgr_timing=1</TD>
+   <TD>mainmenumgr_tools=24</TD>
    <TD>mainmenumgr_window=2</TD>
-   <TD>mainwinmenumgr_layout=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=34</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainwinmenumgr_layout=2</TD>
+   <TD>msgtreepanel_message_view_tree=34</TD>
    <TD>msgview_filter_messages=2</TD>
    <TD>msgview_information_messages=1</TD>
-   <TD>msgview_warning_messages=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>netlisttreeview_netlist_tree=12</TD>
-   <TD>pacommandnames_add_config_memory=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=3</TD>
+   <TD>netlisttreeview_netlist_tree=13</TD>
+   <TD>pacommandnames_add_config_memory=5</TD>
    <TD>pacommandnames_add_sources=1</TD>
-   <TD>pacommandnames_auto_connect_target=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_fit_selection=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_connect_target=3</TD>
+   <TD>pacommandnames_auto_fit_selection=2</TD>
    <TD>pacommandnames_auto_update_hier=9</TD>
    <TD>pacommandnames_close_project=3</TD>
-   <TD>pacommandnames_edit_constraint_sets=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_fed_toggle_routing_resources=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_edit_constraint_sets=2</TD>
+   <TD>pacommandnames_fed_toggle_routing_resources=1</TD>
    <TD>pacommandnames_goto_implemented_design=5</TD>
    <TD>pacommandnames_goto_netlist_design=2</TD>
-   <TD>pacommandnames_language_templates=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_log_window=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_language_templates=8</TD>
+   <TD>pacommandnames_log_window=2</TD>
    <TD>pacommandnames_new_project=1</TD>
-   <TD>pacommandnames_open_hardware_manager=8</TD>
-   <TD>pacommandnames_open_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_program_fpga=4</TD>
+   <TD>pacommandnames_open_hardware_manager=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_project=1</TD>
+   <TD>pacommandnames_program_fpga=5</TD>
    <TD>pacommandnames_reports_window=2</TD>
-   <TD>pacommandnames_run_bitgen=10</TD>
-   <TD>pacommandnames_run_implementation=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_select_area=2</TD>
+   <TD>pacommandnames_run_bitgen=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_implementation=4</TD>
+   <TD>pacommandnames_schematic=1</TD>
+   <TD>pacommandnames_select_area=2</TD>
    <TD>pacommandnames_set_used_in_prop=2</TD>
-   <TD>pacommandnames_src_disable=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_src_disable=1</TD>
    <TD>pacommandnames_src_enable=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_write_config_memory_file=1</TD>
+   <TD>pacommandnames_write_config_memory_file=1</TD>
    <TD>pacommandnames_zoom_fit=1</TD>
-   <TD>pacommandnames_zoom_in=2</TD>
-   <TD>pacommandnames_zoom_out=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_code=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_in=2</TD>
+   <TD>pacommandnames_zoom_out=13</TD>
+   <TD>paviews_code=1</TD>
    <TD>paviews_device=1</TD>
-   <TD>paviews_project_summary=9</TD>
-   <TD>paviews_schematic=7</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_timing_constraints=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=12</TD>
+   <TD>paviews_schematic=13</TD>
+   <TD>paviews_timing_constraints=1</TD>
    <TD>programdebugtab_open_target=3</TD>
-   <TD>programdebugtab_program_device=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=15</TD>
    <TD>programdebugtab_refresh_device=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=9</TD>
-   <TD>projecttab_close_design=7</TD>
-   <TD>projecttab_reload=8</TD>
-   <TD>rdicommands_custom_commands=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=1</TD>
-   <TD>rdicommands_line_comment=4</TD>
+   <TD>programfpgadialog_program=15</TD>
+   <TD>progressdialog_background=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_close_design=7</TD>
+   <TD>projecttab_reload=14</TD>
+   <TD>rdicommands_custom_commands=13</TD>
+   <TD>rdicommands_delete=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_line_comment=4</TD>
    <TD>rdicommands_properties=3</TD>
-   <TD>rdicommands_save_file=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_settings=2</TD>
-   <TD>rdicommands_undo=10</TD>
-   <TD>saveprojectutils_save=7</TD>
+   <TD>rdicommands_save_file=15</TD>
+   <TD>rdicommands_settings=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_undo=10</TD>
+   <TD>saveprojectutils_save=8</TD>
    <TD>settingsdialog_options_tree=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>settingsdialog_project_tree=10</TD>
-   <TD>setusedinprop_implementation=1</TD>
+   <TD>settingsdialog_project_tree=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>setusedinprop_implementation=1</TD>
    <TD>setusedinprop_synthesis=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=1</TD>
-   <TD>srcchoosertable_src_chooser_table=2</TD>
+   <TD>srcchooserpanel_create_file=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchoosertable_src_chooser_table=2</TD>
    <TD>srcfileproppanels_implementation=1</TD>
    <TD>srcfileproppanels_synthesis=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=7</TD>
-   <TD>srcmenu_refresh_hierarchy=1</TD>
+   <TD>srcmenu_ip_hierarchy=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_refresh_hierarchy=1</TD>
    <TD>srcmenu_set_file_type=1</TD>
    <TD>taskbanner_close=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>tclconsoleview_tcl_console_code_editor=1</TD>
-   <TD>touchpointsurveydialog_no=1</TD>
+   <TD>tclconsoleview_tcl_console_code_editor=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>touchpointsurveydialog_no=1</TD>
    <TD>touchpointsurveydialog_remind_me_later=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -148,28 +151,28 @@
 </TR><TR ALIGN='LEFT'>   <TD>editdelete=1</TD>
    <TD>editproperties=3</TD>
    <TD>fedtoggleroutingresourcescmdhandler=1</TD>
-   <TD>launchprogramfpga=9</TD>
+   <TD>launchprogramfpga=15</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=6</TD>
+   <TD>openhardwaremanager=9</TD>
    <TD>openproject=1</TD>
    <TD>refreshdevice=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=11</TD>
-   <TD>runimplementation=20</TD>
-   <TD>runschematic=11</TD>
-   <TD>runsynthesis=20</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=14</TD>
+   <TD>runimplementation=23</TD>
+   <TD>runschematic=17</TD>
+   <TD>runsynthesis=24</TD>
 </TR><TR ALIGN='LEFT'>   <TD>setsourceenabled=4</TD>
    <TD>showview=10</TD>
    <TD>timingconstraintswizard=2</TD>
    <TD>toggleautofitselection=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>toggleselectareamode=2</TD>
    <TD>toolssettings=2</TD>
-   <TD>toolstemplates=5</TD>
+   <TD>toolstemplates=8</TD>
    <TD>viewtaskimplementation=5</TD>
 </TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=1</TD>
    <TD>viewtasksynthesis=4</TD>
    <TD>zoomfit=1</TD>
    <TD>zoomin=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>zoomout=25</TD>
+</TR><TR ALIGN='LEFT'>   <TD>zoomout=28</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
@@ -213,16 +216,16 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>fdre=9</TD>
+    <TD>carry4=10</TD>
+    <TD>fdre=41</TD>
     <TD>fdse=7</TD>
-    <TD>gnd=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ibuf=11</TD>
-    <TD>lut1=1</TD>
-    <TD>lut2=11</TD>
-    <TD>lut3=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut5=4</TD>
-    <TD>lut6=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=11</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=16</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=7</TD>
+    <TD>lut5=8</TD>
+    <TD>lut6=2</TD>
     <TD>obuf=17</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
 </TR>   </TABLE>
@@ -231,16 +234,16 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>fdre=9</TD>
+    <TD>carry4=10</TD>
+    <TD>fdre=41</TD>
     <TD>fdse=7</TD>
-    <TD>gnd=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ibuf=11</TD>
-    <TD>lut1=1</TD>
-    <TD>lut2=11</TD>
-    <TD>lut3=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut5=4</TD>
-    <TD>lut6=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=11</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=16</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=7</TD>
+    <TD>lut5=8</TD>
+    <TD>lut6=2</TD>
     <TD>obuf=17</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
 </TR>   </TABLE>
@@ -383,24 +386,24 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
-    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=9</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
+    <TD>carry4_functional_category=CarryLogic</TD>
+    <TD>carry4_used=10</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+    <TD>fdre_used=41</TD>
+    <TD>fdse_functional_category=Flop &amp; Latch</TD>
     <TD>fdse_used=7</TD>
-    <TD>ibuf_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=1</TD>
-    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=3</TD>
+    <TD>lut1_functional_category=LUT</TD>
+    <TD>lut1_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
+    <TD>lut2_used=16</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=2</TD>
+    <TD>lut4_used=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=4</TD>
+    <TD>lut5_used=8</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=4</TD>
+    <TD>lut6_used=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=17</TD>
 </TR>   </TABLE>
@@ -418,34 +421,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=17</TD>
-    <TD>lut_as_logic_util_percentage=0.03</TD>
+    <TD>lut_as_logic_used=29</TD>
+    <TD>lut_as_logic_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=126800</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=16</TD>
-    <TD>register_as_flip_flop_util_percentage=0.01</TD>
+    <TD>register_as_flip_flop_used=48</TD>
+    <TD>register_as_flip_flop_util_percentage=0.04</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=17</TD>
-    <TD>slice_luts_util_percentage=0.03</TD>
+    <TD>slice_luts_used=29</TD>
+    <TD>slice_luts_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=16</TD>
-    <TD>slice_registers_util_percentage=0.01</TD>
+    <TD>slice_registers_used=48</TD>
+    <TD>slice_registers_util_percentage=0.04</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=17</TD>
-    <TD>lut_as_logic_util_percentage=0.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=29</TD>
+    <TD>lut_as_logic_util_percentage=0.05</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -453,35 +456,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=6</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=6</TD>
-    <TD>register_driven_from_outside_the_slice_used=10</TD>
-    <TD>register_driven_from_within_the_slice_fixed=10</TD>
-    <TD>register_driven_from_within_the_slice_used=6</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=6</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=6</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=2</TD>
+    <TD>register_driven_from_outside_the_slice_used=8</TD>
+    <TD>register_driven_from_within_the_slice_fixed=8</TD>
+    <TD>register_driven_from_within_the_slice_used=40</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=16</TD>
-    <TD>slice_registers_util_percentage=0.01</TD>
-    <TD>slice_used=6</TD>
-    <TD>slice_util_percentage=0.04</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=48</TD>
+    <TD>slice_registers_util_percentage=0.04</TD>
+    <TD>slice_used=23</TD>
+    <TD>slice_util_percentage=0.15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=6</TD>
+    <TD>slicel_used=20</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=0</TD>
+    <TD>slicem_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=15850</TD>
     <TD>unique_control_sets_fixed=15850</TD>
-    <TD>unique_control_sets_used=3</TD>
-    <TD>unique_control_sets_util_percentage=0.02</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.02</TD>
-    <TD>using_o5_and_o6_used=8</TD>
-    <TD>using_o5_output_only_fixed=8</TD>
+    <TD>unique_control_sets_used=4</TD>
+    <TD>unique_control_sets_util_percentage=0.03</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.03</TD>
+    <TD>using_o5_and_o6_used=6</TD>
+    <TD>using_o5_output_only_fixed=6</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=9</TD>
+    <TD>using_o6_output_only_used=23</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -570,10 +573,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:23s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:28s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=523.223MB</TD>
-    <TD>memory_peak=786.094MB</TD>
+    <TD>memory_gain=525.965MB</TD>
+    <TD>memory_peak=789.113MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
